--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/fairy-icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="/fairy-icon.png" type="image/png"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="fairy's vault">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link rel="apple-touch-icon" href="/fairy-icon-180x180.png" sizes="180x180">
+    <link rel="mask-icon" href="/fairy-icon.png" color="#7F6D88">
+    <meta name="theme-color" content="#7F6D88">
     <link
-      href="https://fonts.googleapis.com/css2?family=Astloch&family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;1,100;1,200;1,400;1,600&display=swap"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?family=Astloch&family=Montserrat:ital,wght@0,100;0,200;0,400;0,600;1,100;1,200;1,400;1,600&display=swap"
+            rel="stylesheet"
     />
     <title>fairyVault</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
